Update 'ixlg8gobn-nodejs' component image to: quay.io/rhtap_qe/rhtap-qe-nodejs:5e225734879efec24bee48e5eb7de64f0d8fd65b@sha256:92fda4b8bbed3b559b81e497d4895adc03cf10112fa97b0389eca6ba73d5be89

--- a/components/ixlg8gobn-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/ixlg8gobn-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: ixlg8gobn-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-nodejs:5e225734879efec24bee48e5eb7de64f0d8fd65b@sha256:92fda4b8bbed3b559b81e497d4895adc03cf10112fa97b0389eca6ba73d5be89
+          name: container-image
